# twin-reasoning

./: .gitignore  README.md  docker-compose.yml  metrics_visualizations.md  openapi-updated.json  scratch_rec.py
backend/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  test_chat_endpoint.py  test_llm.py  test_llm_stream.py
backend/app/: config.py  dependencies.py  llm_provider.py  main.py  models.py
backend/app/routes/: chat.py  metrics.py  personas.py  reviews.py  twins.py
backend/app/services/: recommendation.py  user_modeling.py
backend/data/: items.faiss  items_meta.json  metrics.json  personas.json  predictions.csv  predictions.json
backend/scripts/: build_faiss_index.py  compute_metrics.py  generate_predictions.py
docs/: Task_A_Digital_Twin.md  Task_B_Recommendation_Agent.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: index.js  metrics.js  personas.js  taskA.js  taskB.js
frontend/src/components/: Footer.jsx  Header.jsx  ItemCard.jsx  LoadingSkeleton.jsx  RecommendationCard.jsx  StarRating.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: Dashboard.jsx  EvalPanel.jsx  HomeFeed.jsx  ItemDetail.jsx  OnboardingChat.jsx  PersonaSelect.jsx  TwinChat.jsx
