[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pydantic-settings>=2.2.0",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.4.0",
    "uvicorn[standard]>=0.29.0",
]
